--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
+    "react-error-overlay": "^6.0.9",
     "supertest": "^6.2.1"
   },
   "proxy": "http://localhost:4000",
